tests/rosetta/out/C/averages-mode.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:42Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:42Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int i = 0;
static int max1 = 0;
static int max2 = 0;

int _mochi_main() {
  list_int arr1 = list_int_create(5);
  arr1.data[0] = 2;
  arr1.data[1] = 7;
  arr1.data[2] = 1;
  arr1.data[3] = 8;
  arr1.data[4] = 2;
  map_string_int tmp1 = map_string_int_create(0);
  int counts1 = tmp1;
  list_int keys1 = list_int_create(0);
  while (i < 5) {
    int v = arr1.data[i];
    if (v in counts1) {
      counts1.data[v] = counts1.data[v] + 1;
    } else {
      counts1.data[v] = 1;
      int tmp2_data[1];
      list_int tmp2 = {1, tmp2_data};
      tmp2.data[0] = v;
      list_int tmp3 = concat_list_int(keys1, tmp2);
      keys1 = tmp3;
    }
    i = i + 1;
  }
  i = 0;
  while (i < keys1.len) {
    int k = keys1.data[i];
    int c = counts1.data[k];
    if (c > max1) {
      max1 = c;
    }
    i = i + 1;
  }
  list_int modes1 = list_int_create(0);
  i = 0;
  while (i < keys1.len) {
    int k = keys1.data[i];
    if (counts1.data[k] == max1) {
      int tmp4_data[1];
      list_int tmp4 = {1, tmp4_data};
      tmp4.data[0] = k;
      list_int tmp5 = concat_list_int(modes1, tmp4);
      modes1 = tmp5;
    }
    i = i + 1;
  }
  char *tmp6 = _str(modes1);
  printf("%s\n", tmp6);
  list_int arr2 = list_int_create(6);
  arr2.data[0] = 2;
  arr2.data[1] = 7;
  arr2.data[2] = 1;
  arr2.data[3] = 8;
  arr2.data[4] = 2;
  arr2.data[5] = 8;
  map_string_int tmp7 = map_string_int_create(0);
  int counts2 = tmp7;
  list_int keys2 = list_int_create(0);
  i = 0;
  while (i < 6) {
    int v = arr2.data[i];
    if (v in counts2) {
      counts2.data[v] = counts2.data[v] + 1;
    } else {
      counts2.data[v] = 1;
      int tmp8_data[1];
      list_int tmp8 = {1, tmp8_data};
      tmp8.data[0] = v;
      list_int tmp9 = concat_list_int(keys2, tmp8);
      keys2 = tmp9;
    }
    i = i + 1;
  }
  i = 0;
  while (i < keys2.len) {
    int k = keys2.data[i];
    int c = counts2.data[k];
    if (c > max2) {
      max2 = c;
    }
    i = i + 1;
  }
  list_int modes2 = list_int_create(0);
  i = 0;
  while (i < keys2.len) {
    int k = keys2.data[i];
    if (counts2.data[k] == max2) {
      int tmp10_data[1];
      list_int tmp10 = {1, tmp10_data};
      tmp10.data[0] = k;
      list_int tmp11 = concat_list_int(modes2, tmp10);
      modes2 = tmp11;
    }
    i = i + 1;
  }
  char *tmp12 = _str(modes2);
  printf("%s\n", tmp12);
  return 0;
}
int main() { return _mochi_main(); }
